--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/07/32/a0/0732a0c11337382a2cbf6ebc8fd4b5f5.jpg">
 
     <!-- Open Graph (Discord, embeds) -->
-    <meta property="og:title" content="mev/siq">
-    <meta property="og:description" content="mev / siq">
+    <meta property="og:title" content="cursed.lat">
     <meta property="og:image" content="https://i.pinimg.com/736x/07/32/a0/0732a0c11337382a2cbf6ebc8fd4b5f5.jpg">
     <meta property="og:type" content="website">
 
     <!-- Twitter / X preview -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="mev/siq">
+    <meta name="twitter:title" content="cursed.lat">
     <meta name="twitter:image" content="https://i.pinimg.com/736x/07/32/a0/0732a0c11337382a2cbf6ebc8fd4b5f5.jpg">
     <style>
         * {
