--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>cursed.lat</title>
     
-    <!-- Favicon / tab icon -->
-    <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/f1/03/6f/f1036f5522d1ee142381383f2460259e.jpg">
+    <!-- favicon / tab icon -->
+    <link rel="icon" type="image/png" href="https://i.pinimg.com/474x/69/84/2d/69842d0261bcd7133e35483a2b71f380.jpg">
 
-    <!-- Open Graph (Discord, embeds) -->
+    <!-- open graph (discord, embeds) -->
     <meta property="og:title" content="cursed.lat">
-    <meta property="og:image" content="https://i.pinimg.com/736x/f1/03/6f/f1036f5522d1ee142381383f2460259e.jpg">
+    <meta property="og:image" content="https://i.pinimg.com/474x/69/84/2d/69842d0261bcd7133e35483a2b71f380.jpg">
     <meta property="og:type" content="website">
 
-    <!-- Twitter / X preview -->
+    <!-- twitter / x preview -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="cursed.lat">
-    <meta name="twitter:image" content="https://i.pinimg.com/736x/f1/03/6f/f1036f5522d1ee142381383f2460259e.jpg">
+    <meta name="twitter:image" content="https://i.pinimg.com/474x/69/84/2d/69842d0261bcd7133e35483a2b71f380.jpg">
+
     <style>
         * {
             margin: 0;
@@ -70,26 +71,27 @@
 
         .glow {
             font-size: 3rem;
-            font-weight: 500;
+            font-weight: normal;
             color: #fff;
             text-shadow: 0 0 5px #fff, 0 0 10px #fff;
             letter-spacing: 1px;
             animation: pulse 2s infinite;
             margin-bottom: 10px;
+            text-transform: lowercase;
         }
 
         .sub {
             font-size: 1rem;
             color: #fff;
-            letter-spacing: 2px;
-            text-transform: uppercase;
+            letter-spacing: 1px;
             margin-top: 10px;
+            text-transform: lowercase;
         }
 
         .sub a {
-            color: #;
+            color: #fff;
             text-decoration: none;
-            font-weight: bold;
+            font-weight: normal;
         }
 
         .sub a:hover {
@@ -142,8 +144,8 @@
     <div class="stars" id="stars"></div>
     
     <div class="container">
-        <div class="glow">cursed.lat</div>
-        <div class="sub">Main site: <a href="https://cursed.lat/c" target="_blank">mev/siq</a></div>
+        <div class="glow">mev/cursed</div>
+        <div class="sub">main site: <a href="https://cursed.lat/c" target="_blank">mev/cursed</a></div>
     </div>
 
     <script>
